--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       <div id="scatterChart"></div>
       <p>Uitleg bij scatterplot…</p>
     </section>
+<!-- Voeg dit toe op de plek waar je de knop wilt zien -->
+<a href="co2_health_life_expectancy.html">
+  <button type="button">Bekijk impact CO₂ op levensverwachting</button>
+</a>
+
 
     <section id="conclusie">
       <h2>Conclusie en Aanbevelingen</h2>
