--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
       <a href="co2_health_life_expectancy.html"><button type="button">Bekijk impact CO₂ op levensverwachting</button></a>
     </nav>
 
+    <nav style="text-align:center; margin:2rem 0;">
+      <a href="visualization.html"><button type="button">test</button></a>
+      <a href="test.html"><button type="button">test</button></a>
+    </nav>
+
     <section id="conclusie">
       <h2>Conclusie en Aanbevelingen</h2>
       <p>Slottekst hier…</p>
